Adding adjustment for mobile devices

--- a/index.html
+++ b/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel = "stylesheet" href = "assets/styles/style.css">
+    <meta name="viewport" content="width=device-width">
+
     <head>
         <title>OchiMoto21</title>
     </head>
-    <div class = "content">
         <div>
             <h1>OchiMoto21</h1>
         </div>
-        <div id = "cards">
-            <a href="https://twitter.com/Niken_DCP">
-                <div class="card">
-                    <div class="card-image">
-                        <svg viewBox = "0 0 24 24" aria-hidden="true">
-                            <g>
-                                <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
-                            </g>
-                        </svg>
+        <div class="content">
+            <div id = "cards">
+                <a href="https://twitter.com/Niken_DCP">
+                    <div class="card">
+                        <div class = "card-content">
+                            <div class="card-image">
+                                <svg viewBox = "0 0 24 24" aria-hidden="true">
+                                    <g>
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+                                    </g>
+                                </svg>
+                            </div>
+                            <div class = "card-title">
+                                <h3>X</h3>
+                                <h4>https://twitter.com/Niken_DCP</h4>
+                            </div>
+                        </div>
                     </div>
-                    <div class = "card-title">
-                        <h3>X</h3>
-                        <h4>https://twitter.com/Niken_DCP</h4>
-                    </div>
-                </div>
-            </a>
-            <a href="https://ko-fi.com/niken">
-                <div class="card">
+                </a>
+                <a href="https://ko-fi.com/niken">
+                    <div class="card">
+                        <div class = "card-content">
+
+                            <div class="card-image">
+                                    <img class="ko-fi-logo" src="https://storage.ko-fi.com/cdn/brandasset/logo_white_stroke_small.png" alt="Ko-fi Logo">
+                            </div>
                 
-                    <div class="card-image">
-                            <img class="ko-fi-logo" src="https://storage.ko-fi.com/cdn/brandasset/logo_white_stroke_small.png" alt="Ko-fi Logo">
+                            <div class = "card-title">
+                                <h3>Ko-fi</h3>
+                                <h4>https://ko-fi.com/niken</h4>
+                            </div>
+                        </div>
+                    </div>    
+                </a>
+                <a href="https://github.com/OchiMoto21">
+                    <div class="card">
+                        <div class = "card-content">
+                        <div class="card-image">
+                            <svg aria-hidden="true" viewBox="0 0 16 16">
+                                <path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
+                            </svg>
+                        </div>
+                        <div class="card-title">
+                            <h3>Github</h3>
+                            <h4>https://github.com/OchiMoto21</h4>
+                        </div>
+                        </div>
                     </div>
-        
-                    <div class = "card-title">
-                        <h3>Ko-fi</h3>
-                        <h4>https://ko-fi.com/niken</h4>
-                    </div>
-                </div>    
-            </a>
-            <a href="https://github.com/OchiMoto21">
-                <div class="card">
-                    <div class="card-image">
-                        <svg aria-hidden="true" viewBox="0 0 16 16">
-                            <path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
-                        </svg>
-                    </div>
-                    <div class="card-title">
-                        <h3>Github</h3>
-                        <h4>https://github.com/OchiMoto21</h4>
-                    </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
-    </div>
 
 </html>
 
