--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel = "stylesheet" href = "assets/styles/style.css">
-    <meta name="viewport" content="width=device-width">
-
-
+    
     <head>
+        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="OchiMoto21's Card">
+        <meta name="author" content="OchiMoto21">
         <title>OchiMoto21</title>
         <link rel="icon" type="image/png" href="assets/images/ochi-logo.png"/>
     </head>
