--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="OchiMoto21's Card">
         <meta name="author" content="OchiMoto21">
+        <meta name="image" content="assets/images/tissue.png">
         <title>OchiMoto21</title>
         <link rel="icon" type="image/png" href="assets/images/ochi-logo.png"/>
     </head>
