Change the image metadata content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="OchiMoto21's Card">
         <meta name="author" content="OchiMoto21">
-        <meta property="og:image" content="assets/images/tissue.png">
+        <meta property="og:image" content="https://pbs.twimg.com/media/FzzirKaaYAAZZKF?format=jpg&name=4096x4096">
         <title>OchiMoto21</title>
         <link rel="icon" type="image/png" href="assets/images/ochi-logo.png"/>
     </head>
