--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="OchiMoto21's Card">
         <meta name="author" content="OchiMoto21">
         <meta property="og:image" content="https://pbs.twimg.com/media/FzzirKaaYAAZZKF?format=jpg&name=4096x4096">
+        <meta property="og:image:width" content="1920">
+        <meta property="og:image:height" content="1080">
         <title>OchiMoto21</title>
         <link rel="icon" type="image/png" href="assets/images/ochi-logo.png"/>
     </head>
