--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="OchiMoto21's Card">
         <meta name="author" content="OchiMoto21">
-        <meta property="og:image" content="https://pbs.twimg.com/media/FzzirKaaYAAZZKF?format=jpg&name=4096x4096">
-        <meta property="og:image:width" content="1920">
-        <meta property="og:image:height" content="1080">
+        <meta name="og:image" property="og:image" content="https://pbs.twimg.com/media/FzzirKaaYAAZZKF?format=jpg&name=4096x4096">
+        <meta name="og:image:width" property="og:image:width" content="1920">
+        <meta name="og:image:height" property="og:image:height" content="1080">
         <title>OchiMoto21</title>
         <link rel="icon" type="image/png" href="assets/images/ochi-logo.png"/>
     </head>
